Fixed layered animation on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -694,11 +694,11 @@ ol li::marker {
     will-change: transform;
 }
 /* Stack order: Lowest layers on the bottom, top interface layer at the very front */
-.cake-layer-1 { z-index: 1; margin-left: -4px}
-.cake-layer-2 { z-index: 2; margin-left: -1px}
+.cake-layer-1 { z-index: 1; }
+.cake-layer-2 { z-index: 2; }
 .cake-layer-3 { z-index: 3; }
 .cake-layer-4 { z-index: 4; }
-.cake-layer-5 { z-index: 5; }
+.cake-layer-5 { z-index: 5; margin-top: -4px}
 
 footer {
     position: relative;
